--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/MattTurnure/GruntBoilerplate",
   "devDependencies": {
+    "compression": "^1.2.0",
+    "express": "^4.10.0",
     "grunt-bower-task": "^0.4.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-htmlmin": "^0.3.0",
